# strcase

./: CMakeLists.txt  README.md  strcase.3  strcase.h
